lib/src/compiler/tests/testdata/errors/134.out
error[E009]: unknown identifier `bar`
 --> line:3:26
  |
3 |     with foo = "foo" : ( bar )
  |                          ^^^ this identifier has not been declared
  |